Fixed styling bugs, added zebra striping and overflow scrolling to movie list.

--- a/css/flixstack-popup.css
+++ b/css/flixstack-popup.css
@@ -14,7 +14,6 @@ header {
   border-bottom: #d5d5d5 1px solid;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin-bottom: 10px;
 }
 
 header .title {
@@ -28,6 +27,7 @@ header .title {
 .messages {
   border: 1px dotted #c99;
   margin-top: 10px;
+  margin-bottom: 0;
   background: #fdd;
   padding: 8px;
   list-style: none;
@@ -97,17 +97,41 @@ footer .login-links {
 }
 
 /**
+ * Login form
+ */
+#login-form {
+  padding-top: 10px;
+}
+
+/**
  * Movies to watch
  */
-
 .logged-in.panel-container {
   padding-bottom: 0;
+}
+
+.flixstack-list {
+  max-height: 400px;
+  overflow:scroll;
 }
 
 .flixstack-list ol {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.flixstack-list li {
+  border-bottom: 1px #d5d5d5 dotted;
+  padding-top:10px;
+}
+
+.flixstack-list .last {
+  border-bottom: none;
+}
+
+.flixstack-list .odd {
+  background: #eaf2f8;
 }
 
 .flixstack-list a {
@@ -166,6 +190,8 @@ footer .login-links {
 
 .flixstack-settings {
   padding-bottom: 0;
+  border-top: 1px dotted #d8d8d8;
+  padding-top: 10px;
 }
 
 .flixstack-settings {
